# darktable-mcp

./: .gitignore  README.md  claude_config.json  generate_logos.py  pyproject.toml
src/darktable_mcp/: __init__.py  edits.py  processor.py  sam_engine.py  server.py  xmp_writer.py
