[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "darktable-mcp"
version = "0.1.0"
description = "MCP server for Darktable photo editing via Claude"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "rawpy>=0.18.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "piexif>=1.1.3",
    "ultralytics>=8.3.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
]

[project.scripts]
darktable-mcp = "darktable_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/darktable_mcp"]

[tool.hatch.metadata]
allow-direct-references = true
